[package]
name = "discord-toggle-rpc"
authors  = ["Muhammad Dony Mulya <vveirt@gmail.com>"]
description = "A simple command-line app to toggle Discord Rich Presence written in Rust."
license = "MIT"
version = "0.1.0"
edition = "2018"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }
